--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ version: '3.9'
 
 services:
   chrisomatic:
-    image: ghcr.io/fnndsc/chrisomatic:0.5.0.a2
+    image: ghcr.io/fnndsc/chrisomatic:0.5.0
     networks:
       - local
     volumes:
