Remove chris_store

--- a/secrets.env
+++ b/secrets.env
@@ -12,7 +12,7 @@ DATABASE_PORT=5432
 POSTGRES_DB=chris
 POSTGRES_USER=chris
 POSTGRES_PASSWORD=chris1234
-CHRIS_STORE_URL=http://chrisstore.local:8010/api/v1/
+CHRIS_STORE_URL=https://chrisstore.co/api/v1/
 DEFAULT_FILE_STORAGE=swift.storage.SwiftStorage
 SWIFT_CONTAINER_NAME=users
 SWIFT_AUTH_URL=http://swift:8080/auth/v1.0
