--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,8 +179,7 @@ services:
     user: "10100"
 
   pfdcm-listener:
-    image: ghcr.io/fnndsc/pfdcm:3.1.0a1
-    command: sh -c "mkdir -vp /tmp/data && storescp --fork -od /tmp/data -pm -sp -xcr 'px-recount --xcrdir \"#p\" --xcrfile \"#f\" --verbosity 0 --logdir /home/dicom/log --datadir /home/dicom/data --cleanup' 11113"
+    image: ghcr.io/fnndsc/pypx-listener:0.1.0-alpha.1
     volumes:
       - pfdcm:/home/dicom:rw
     networks:
