Remove swift, store files in volume

--- a/secrets.env
+++ b/secrets.env
@@ -13,10 +13,7 @@ POSTGRES_DB=chris
 POSTGRES_USER=chris
 POSTGRES_PASSWORD=chris1234
 CHRIS_STORE_URL=https://chrisstore.co/api/v1/
-DEFAULT_FILE_STORAGE=swift.storage.SwiftStorage
-SWIFT_CONTAINER_NAME=users
-SWIFT_AUTH_URL=http://swift:8080/auth/v1.0
-SWIFT_USERNAME=chris:chris1234
-SWIFT_KEY=testing
+DEFAULT_FILE_STORAGE=django.core.files.storage.FileSystemStorage
+MEDIA_ROOT=/data
 CELERY_BROKER_URL=amqp://queue:5672
 AUTH_LDAP=false
