--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,13 @@ services:
       - tools
   chris:
     container_name: chris
-    image: ghcr.io/fnndsc/cube:4.0.0
+    image: ghcr.io/fnndsc/cube:4.0.0.pre12
     ports:
       - "8000:8000"
+    volumes:
+      - chris_files:/data:rw
     depends_on:
       - chris_db
-      - swift
       - queue
     networks:
       - local
@@ -36,26 +37,29 @@ services:
       org.chrisproject.role: "ChRIS_ultron_backEnd"
       org.chrisproject.miniChRIS: "miniChRIS"
   worker:
-    image: ghcr.io/fnndsc/cube:4.0.0
+    image: ghcr.io/fnndsc/cube:4.0.0.pre12
     command: celery -A core worker -c 4 -l info -Q main1,main2
+    volumes:
+      - chris_files:/data:rw
     env_file: secrets.env
     environment:
       DJANGO_DB_MIGRATE: "off"
       DJANGO_COLLECTSTATIC: "off"
     depends_on:
       - chris_db
-      - swift
       - queue
       - pfcon
     restart: on-failure
     networks:
       - local
   worker_periodic:
-    image: ghcr.io/fnndsc/cube:4.0.0
+    image: ghcr.io/fnndsc/cube:4.0.0.pre12
     environment:
       DJANGO_DB_MIGRATE: "off"
       DJANGO_COLLECTSTATIC: "off"
     command: celery -A core worker -c 2 -l info -Q periodic
+    volumes:
+      - chris_files:/data:rw
     env_file: secrets.env
     depends_on:
       - chris_db
@@ -64,8 +68,10 @@ services:
     networks:
       - local
   scheduler:
-    image: ghcr.io/fnndsc/cube:4.0.0
+    image: ghcr.io/fnndsc/cube:4.0.0.pre12
     command: celery -A core beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    volumes:
+      - chris_files:/data:rw
     env_file: secrets.env
     environment:
       DJANGO_DB_MIGRATE: "off"
@@ -87,19 +93,6 @@ services:
   queue:
     image: docker.io/library/rabbitmq:3
     restart: on-failure
-    networks:
-      - local
-
-  swift:
-    image: docker.io/fnndsc/docker-swift-onlyone:latest
-    init: true
-    environment:
-      - SWIFT_USERNAME=chris:chris1234
-      - SWIFT_KEY=testing
-    ports:
-      - "8080:8080"
-    volumes:
-      - swift_storage:/srv
     networks:
       - local
 
@@ -166,17 +159,20 @@ services:
       - pacs
 
   pfdcm:
-    image: ghcr.io/fnndsc/pfdcm:3.0.14
+    image: ghcr.io/fnndsc/pfdcm:3.1.2
     container_name: pfdcm
+    environment:
+      MAX_WORKERS: 1
     volumes:
       - pfdcm:/home/dicom:rw
       - ./pfdcm-services:/home/dicom/services:ro
+      - chris_files:/var/chris:rw
     ports:
       - "4005:4005"
     networks:
       - pacs
       - local
-    user: "10100"
+    user: "1001"
 
   pfdcm-listener:
     image: ghcr.io/fnndsc/pypx-listener:0.4.0
@@ -184,7 +180,7 @@ services:
       - pfdcm:/home/dicom:rw
     networks:
       - pacs
-    user: "10100"
+    user: "1001"
     restart: on-failure
     logging:
       driver: fluentd
@@ -197,12 +193,20 @@ services:
 
   # Non-root container user workarounds
 
+  cube-nonroot-user-volume-fix:
+    image: docker.io/library/alpine:latest
+    volumes:
+      - chris_files:/var/chris:rw
+    user: root
+    command: chown 1001 /var/chris
+    restart: "no"
+
   pfdcm-nonroot-user-volume-fix:
     image: docker.io/library/alpine:latest
     volumes:
       - pfdcm:/home/dicom:rw
     user: root
-    command: chown 10100 /home/dicom
+    command: chown 1001 /home/dicom
     restart: "no"
 
   pfcon-nonroot-user-volume-fix:
@@ -303,8 +307,8 @@ networks:
   monitoring:
 
 volumes:
+  chris_files:
   chris_db_data:
-  swift_storage:
   remote:
   orthanc:
   pfdcm:
