--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - tools
   chris:
     container_name: chris
-    image: ghcr.io/fnndsc/cube:4.0.0.pre12
+    image: ghcr.io/fnndsc/cube:4.0.0
     ports:
       - "8000:8000"
     volumes:
@@ -37,7 +37,7 @@ services:
       org.chrisproject.role: "ChRIS_ultron_backEnd"
       org.chrisproject.miniChRIS: "miniChRIS"
   worker:
-    image: ghcr.io/fnndsc/cube:4.0.0.pre12
+    image: ghcr.io/fnndsc/cube:4.0.0
     command: celery -A core worker -c 4 -l info -Q main1,main2
     volumes:
       - chris_files:/data:rw
@@ -53,7 +53,7 @@ services:
     networks:
       - local
   worker_periodic:
-    image: ghcr.io/fnndsc/cube:4.0.0.pre12
+    image: ghcr.io/fnndsc/cube:4.0.0
     environment:
       DJANGO_DB_MIGRATE: "off"
       DJANGO_COLLECTSTATIC: "off"
@@ -68,7 +68,7 @@ services:
     networks:
       - local
   scheduler:
-    image: ghcr.io/fnndsc/cube:4.0.0.pre12
+    image: ghcr.io/fnndsc/cube:4.0.0
     command: celery -A core beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
       - chris_files:/data:rw
