--- a/secrets.env
+++ b/secrets.env
@@ -6,14 +6,13 @@ DJANGO_CORS_ALLOW_ALL_ORIGINS=true
 DJANGO_CORS_ALLOWED_ORIGINS=https://babymri.org
 DJANGO_SECURE_PROXY_SSL_HEADER=
 DJANGO_USE_X_FORWARDED_HOST=false
-STATIC_ROOT=/home/localuser/mod_wsgi-0.0.0.0:8000/htdocs/static/
-DATABASE_HOST=chris_db
+DATABASE_HOST=db
 DATABASE_PORT=5432
 POSTGRES_DB=chris
 POSTGRES_USER=chris
 POSTGRES_PASSWORD=chris1234
 CHRIS_STORE_URL=https://chrisstore.co/api/v1/
-DEFAULT_FILE_STORAGE=django.core.files.storage.FileSystemStorage
+STORAGE_ENV=filesystem
 MEDIA_ROOT=/data
 CELERY_BROKER_URL=amqp://queue:5672
-AUTH_LDAP=false
+AUTH_LDAP=False
