--- a/chrisomatic.yml
+++ b/chrisomatic.yml
@@ -1,4 +1,4 @@
-version: 1.1
+version: 1.2
 
 on:
   cube_url: http://chris:8000/api/v1/
@@ -13,6 +13,7 @@ cube:
       username: pfcon
       password: pfcon1234
       description: Local compute environment
+      innetwork: true
   plugins:
     - name: pl-dircopy
       version: 2.1.1
