--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -193,24 +193,27 @@ services:
       - "4005:4005"
     networks:
       - pacs
-      - local
     user: "1001"
     profiles:
       - pacs
 
-  pfdcm-listener:
-    image: ghcr.io/fnndsc/pypx-listener:0.4.0
+  oxidicom:
+    image: ghcr.io/fnndsc/oxidicom:latest
+    container_name: oxidicom
+    environment:
+      CHRIS_URL: http://chris:8000/api/v1/
+      CHRIS_USERNAME: chris
+      CHRIS_PASSWORD: chris1234
+      CHRIS_FILES_ROOT: /data
+      CHRIS_SCP_AET: ChRIS
+      CHRIS_PACS_NAME: orthanc
     volumes:
-      - pfdcm:/home/dicom:rw
+      - chris_files:/data:rw
+    ports:
+      - "11111:11111"
     networks:
       - pacs
-    user: "1001"
-    restart: unless-stopped
-    depends_on:
-      - pfdcm-nonroot-user-volume-fix
-    profiles:
-      - pacs
-
+      - local
   pfbridge:
     image: docker.io/fnndsc/pfbridge:3.7.2
     container_name: pfbridge
