Upgrade CUBE to version 6.1.0

--- a/secrets.env
+++ b/secrets.env
@@ -1,3 +1,4 @@
+CHRIS_SUPERUSER_PASSWORD=chris1234
 DJANGO_SETTINGS_MODULE=config.settings.production
 CUBE_CELERY_POLL_INTERVAL=5.0
 DJANGO_ALLOWED_HOSTS=*
