--- a/secrets.env
+++ b/secrets.env
@@ -16,4 +16,5 @@ CHRIS_STORE_URL=https://chrisstore.co/api/v1/
 STORAGE_ENV=filesystem
 MEDIA_ROOT=/data
 CELERY_BROKER_URL=amqp://queue:5672
+NATS_ADDRESS=nats://nats:4222
 AUTH_LDAP=False
